<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="welcome_message">Welcome To The Memory Game!</string>
    <string name="insert_date">Please Insert Age</string>
    <string name="insert_name">Please Insert Your Name</string>
    <string name="confirm">Confirm</string>
    <string name="default_name">NoName</string>
    <string name="choose_diff">Choose your playing difficulty</string>
    <string name="default_age">0</string>
    <string name="button_easy">Easy</string>
    <string name="button_medium">medium</string>
    <string name="button_hard">Hard</string>
    <string name="timer">0</string>



</resources>
